# scribblemd

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
res/: scribble.rc
src/: CMakeLists.txt  MarkdownEditorMainWindow.cpp  MarkdownEditorMainWindow.h  main.cpp  markdowneditor.cpp  markdowneditor.h  viewer.fbp
src/Nowy folder/: markdowneditor.cpp  markdowneditor.h
